<resources>
    <string name="app_name">"  Calculator"</string>
    <string name="text_view">""</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="sum">+</string>
    <string name="sex">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="sup">-</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="mul">*</string>
    <string name="dev">/</string>
    <string name="zero">0</string>
<string name="cl">%</string>
    <string name="delete" >Delete</string>
    <string name="eqel">=</string>
    <string name="Delete">delete</string>
</resources>